# dj-hitcount

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  dev-requirements.txt  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
.scripts/: release.sh
docs/: Makefile  conf.py  example_project.rst  index.rst  installation.rst  migrating-from-django-hitcount.rst  models.rst  overview.rst  settings.rst
hitcount/: __init__.py  admin.py  apps.py  managers.py  mixins.py  models.py  signals.py  urls.py  utils.py  views.py
hitcount/conf/: __init__.py  defaults.py
hitcount/management/commands/: hitcount_cleanup.py
hitcount/managers/: __init__.py  blockers.py  hits.py
hitcount/migrations/: 0001_initial.py  0002_index_ip_and_session.py  0003_auto_20190608_1004.py  0004_auto_20200704_0933.py  0005_auto_20210615_1519.py  0005_auto_20210616_2026.py
hitcount/models/: __init__.py  blockers.py  hits.py
hitcount/templatetags/: hitcount_tags.py
tests/: settings.py  test_admin.py  test_hitcount_cleanup.py  test_managers.py  test_mixins.py  test_models.py  test_selenium.py  test_template_tags.py  test_utils.py  test_views.py  urls.py
tests/blog/: admin.py  models.py  views.py
tests/blog/fixtures/: initial_data.json
tests/blog/migrations/: 0001_initial.py  0002_auto_20150512_1644.py
tests/blog/templates/blog/: base.html  index.html
tests/test_commands/: test_hitcount_cleanup.py
tests/test_managers/: test_blockers.py  test_hits.py
tests/test_models/: test_blockers.py  test_hits.py
