[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dj-hitcount"
version = "2.0.0"
authors = [
    {name = "Abhyudai"},
]
description = "Hit counting application for django"
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "django",
    "hit",
    "hits",
    "hitcount",
    "views",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "Django>=4.2",
]

[project.urls]
Homepage = "https://github.com/abhiabhi94/dj-hitcount"
Repository = "https://github.com/abhiabhi94/dj-hitcount"
Documentation = "https://dj-hitcount.readthedocs.io"

[project.optional-dependencies]
docs = [
    "Sphinx",
    "furo",
]
dev = [
    "pytest",
    "pytest-django",
    "pytest-randomly",
    "selenium",
    "coverage",
    "pre-commit",
]

[tool.pytest.ini_options]
django_find_project = false
addopts = """
    -p no:doctest
    --ds=tests.settings
    --reuse-db
    """
markers = [
    # marks tests as slow (deselect with '-m "not slow"')
    "slow",
]

[tool.coverage.run]
branch = true
parallel = true
source = [
    "hitcount",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.hatch.build.targets.wheel]
packages = ["hitcount"]

[tool.ruff]
line-length = 120
exclude = [".tox", ".git", "*/migrations/*", "*/static/CACHE/*", "docs"]
